# duckpy

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: codeql.yml
duckpy/: __init__.py  types.py
duckpy/aio/: __init__.py
