[project]
name = "duckpy"
version = "3.2.0"
description = "A simple module for searching on DuckDuckGo"
readme = "README.md"

dependencies = ["beautifulsoup4>=4.9.1", "httpx[http2]>=0.14,<0.19"]
requires-python = ">=3.6"

authors = [
    { name = "Amano LLC", email = "contact@amanoteam.com" }
]
license = { text = "MIT" }


[project.urls]
homepage = "https://github.com/AmanoTeam/duckpy"
